# DegenHF-The-Next-Gen-Authentication-Encryption-Framework

./: .gitignore  CONTRIBUTING.md  DegenHF.sln  ECC_Security_Package_Design_Spec.txt  README.md  SECURITY.md  framework_priority.txt
CSharp/ASP.NETCore/: README.md
CSharp/ASP.NETCore/DegenHF.EccAuth/: DegenHF.EccAuth.csproj
CSharp/ASP.NETCore/DegenHF.EccAuth.AspNetCore/: DegenHF.EccAuth.AspNetCore.csproj  EccAuthMiddleware.cs
CSharp/ASP.NETCore/DegenHF.EccAuth.AspNetCore/Controllers/: AuthController.cs
CSharp/NET-MAUI/: .gitignore  DegenHF.NET-MAUI.csproj  EccAuthHandler.cs  MainPage.xaml  MainPage.xaml.cs
CSharp/NET-MAUI/Tests/: EccAuthHandlerTests.cs
GameEngines/Cocos2d-x/: CMakeLists.txt  README.md  degenhf-cocos2dx.pc.in
GameEngines/Cocos2d-x/Classes/DegenHF/: AuthSampleScene.cpp  AuthSampleScene.h  ECCAuthHandler.cpp  ECCAuthHandler.h
GameEngines/Cocos2d-x/cocos2d/extensions/DegenHF/: AuthExtension.cpp  AuthExtension.h
GameEngines/CocosCreator/: .gitignore  CHANGELOG.md  ExampleIntegration.js  IMPLEMENTATION_SUMMARY.md  README.md  package.json
GameEngines/CocosCreator/assets/scenes/: AuthDemoScene.js
GameEngines/CocosCreator/assets/scripts/: AuthDemo.js
GameEngines/CocosCreator/assets/scripts/degenhf/: AuthExtension.js  AuthTestSuite.js  ECCAuthHandler.js
GameEngines/Godot/: DegenHF.Godot.csproj  README.md  plugin.cfg
GameEngines/Godot/addons/DegenHF/: AuthExtension.cs  DegenHFAuth.gd  ECCAuthHandler.cs
GameEngines/Godot/demo/scenes/: AuthDemo.tscn
GameEngines/Godot/demo/scripts/: AuthDemo.gd
GameEngines/SDL2_Custom/: CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
GameEngines/SDL2_Custom/cmake/: DegenHFSDL2AuthConfig.cmake.in
GameEngines/SDL2_Custom/examples/: main.cpp
GameEngines/SDL2_Custom/include/: DegenHFECCAuthHandler.hpp  DegenHFSDL2AuthIntegration.hpp
GameEngines/SDL2_Custom/src/: DegenHFECCAuthHandler.cpp  DegenHFSDL2AuthIntegration.cpp
GameEngines/SDL2_Custom/tests/: test_auth.cpp
GameEngines/Unity/: README.md
GameEngines/Unity/Assets/DegenHF/: package.json
GameEngines/Unity/Assets/DegenHF/Examples/: AuthManager.cs
GameEngines/Unity/Assets/DegenHF/Runtime/: DegenHF.EccAuth.asmdef  EccAuthHandler.cs
GameEngines/Unity/Assets/DegenHF/Tests/: EccAuthHandlerTests.cs
GameEngines/Unreal/: README.md
GameEngines/Unreal/Content/Docs/: AuthenticationWidgetGuide.md  CPP_IntegrationGuide.md
GameEngines/Unreal/Plugins/DegenHF/: DegenHF.uplugin
Go/Echo/degenhf/: auth_test.go
Go/Gin/: README.md  go.mod  main.go
Go/Gin/degenhf/: auth.go  auth_test.go
Go/Revel/: main.go
Go/Revel/app/controllers/: app.go  auth.go
Go/Revel/app/models/: user.go
Java/JakartaEE/: README.md  pom.xml
Java/JakartaEE/examples/: AuthResource.java
Java/SpringBoot/: README.md  pom.xml
Java/SpringBoot/examples/: ExampleApplication.java
JavaScript/Express.js/: index.js  package.json
JavaScript/Express.js/examples/: app.js
JavaScript/NestJS/: ecc-auth.guard.ts  ecc-auth.module.ts  example.ts  package.json  tsconfig.json
JavaScript/Next.js/: README.md  package.json
JavaScript/Next.js/examples/pages/: profile.js
JavaScript/Next.js/examples/pages/components/: LoginForm.js
Kotlin/Ktor/: README.md
Languages/CSharp/ASP.NETCore/: .gitignore
Languages/CSharp/ASP.NETCore/DegenHF.EccAuth/: DegenHF.EccAuth.csproj  EccAuthHandler.cs
Languages/CSharp/ASP.NETCore/DegenHF.EccAuth.AspNetCore/: Program.cs
Languages/CSharp/NET-MAUI/: Program.cs  README.md
Languages/Go/Echo/: .gitignore  README.md  go.mod  main.go
Languages/Go/Echo/degenhf/: echo.go
Languages/Go/Gin/degenhf/: gin.go
Languages/Go/Revel/: README.md  go.mod
Languages/Go/Revel/app/: app.go
Languages/Go/Revel/conf/: app.conf  routes
Languages/Go/Revel/tests/: auth_test.go
Languages/Java/JakartaEE/: pom.xml
Languages/Java/SpringBoot/: README.md
Languages/JavaScript/Express.js/: README.md
Languages/JavaScript/NestJS/: README.md  ecc-auth.service.ts  ecc-auth.spec.ts  index.ts
Languages/JavaScript/Next.js/: index.js
Languages/Kotlin/Ktor/: .gitignore  build.gradle.kts  settings.gradle.kts
Languages/Kotlin/SpringBoot/: README.md  build.gradle.kts
Languages/PHP/Laravel/: README.md  composer.json
Languages/PHP/Laravel/examples/: AuthController.php
Languages/PHP/Laravel/src/: EccAuthServiceProvider.php
Languages/Python/Django/: README.md
Languages/Python/Django/degenhf_django/: __init__.py  core.py
Languages/Python/Django/examples/: django_integration.py
Languages/Python/FastAPI/: README.md  setup.py
Languages/Python/FastAPI/degenhf_fastapi/: __init__.py  core.py
Languages/Python/FastAPI/examples/: fastapi_app.py
Languages/Python/Flask/: setup.py
Languages/Python/Flask/degenhf_flask/: core.py
Languages/Ruby/Rails/spec/: spec_helper.rb
Languages/Ruby/Sinatra/: README.md  app.rb
Languages/Ruby/Sinatra/spec/: spec_helper.rb
Languages/Rust/Actix/: .gitignore  Cargo.toml  README.md
Languages/Rust/Actix/src/: main.rs
Languages/Rust/Rocket/: Cargo.toml  README.md
Languages/Rust/Rocket/src/: auth.rs  main.rs
Languages/Swift/Kitura/: Package.swift
Languages/Swift/Vapor/: README.md
PHP/Laravel/config/: ecc-auth.php
PHP/Laravel/src/: EccAuthService.php
PHP/Laravel/src/Middleware/: EccAuthMiddleware.php
PHP/Laravel/tests/: EccAuthServiceTest.php
Python/Django/: setup.py
Python/FastAPI/: setup.py
Python/Flask/: README.md  setup.py
Python/Flask/degenhf_flask/: __init__.py
Python/Flask/examples/: flask_app.py
Ruby/Rails/: .gitignore  Gemfile  README.md
Ruby/Rails/app/controllers/: auth_controller.rb
Ruby/Rails/config/: application.rb  routes.rb
Ruby/Sinatra/: Gemfile
Ruby/Sinatra/spec/: auth_spec.rb
Rust/Rocket/: .gitignore  Cargo.toml  README.md
Swift/Kitura/: README.md
Swift/Kitura/Sources/DegenHF-Kitura/: main.swift
Swift/Kitura/Tests/DegenHF-KituraTests/: DegenHF_KituraTests.swift
Swift/Vapor/: .gitignore  Package.swift
Swift/Vapor/Sources/App/: Application.swift
Swift/Vapor/Tests/AppTests/: AppTests.swift
docs/: index.md
(+28 files in other folders)
