[package]
name = "degenhf-ecc-auth-rocket"
version = "1.0.0"
edition = "2021"
authors = ["DegenHF <degenhf@example.com>"]
description = "ECC-based authentication for Rocket.rs with enhanced security"
repository = "https://github.com/degenwithheart/DegenHF"
license = "MIT"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.0"
ring = "0.17"
argon2 = "0.5"
blake3 = "1.5"
lru = "0.12"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"

[dependencies.rocket_db_pools]
version = "0.1.0"
optional = true

[features]
default = []
database = ["rocket_db_pools"]