[package]
name = "degenhf-ecc-auth-actix"
version = "1.0.0"
edition = "2021"
authors = ["DegenHF <degenhf@example.com>"]
description = "ECC-based authentication for Actix Web with enhanced security"
repository = "https://github.com/degenwithheart/DegenHF-The-Next-Gen-Authentication-Encryption-Framework"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-http = "3.4"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.0"
ring = "0.17"
argon2 = "0.5"
blake3 = "1.5"
lru = "0.12"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
futures = "0.3"
env_logger = "0.10"

[dependencies.actix-web-httpauth]
version = "0.8"

[features]
default = []
database = []